Bug 457478 - Incorrect warning [clazy-fully-qualified-moc-types] about ActionReply
Summary: Incorrect warning [clazy-fully-qualified-moc-types] about ActionReply
Status: RESOLVED FIXED
Alias: None
Product: clazy
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-04 11:48 UTC by Ilya Pominov
Modified: 2023-02-07 23:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ilya Pominov 2022-08-04 11:48:52 UTC
clazy-fully-qualified-moc-types detecting missing namespace in KAth Helper.
As per KAth Helper documentation https://techbase.kde.org/Development/Tutorials/KAuth/Helper_HowTo#How_the_helper_mechanism_works:
The first thing you should note is using namespace KAuth. This directive is compulsory as each action's signature must look like this:
ActionReply <actionname>(QVariantMap args); 

I.e. ActionReplay must be without namespace. This triggers a warning.
Comment 1 Bug Janitor Service 2022-09-09 13:04:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/clazy/-/merge_requests/64
Comment 2 Ivan Čukić 2023-02-07 23:26:38 UTC
Git commit 18d37db546744f629d13414cfd390f74958a2ba0 by Ivan Čukić, on behalf of Ilya Pominov.
Committed on 07/02/2023 at 23:24.
Pushed by ivan into branch 'master'.

Fix clazy-fully-qualified-moc-types check for ActionReply

ActionReplay in KAuth must be without namespace

M  +5    -0    src/checks/level0/fully-qualified-moc-types.cpp

https://invent.kde.org/sdk/clazy/commit/18d37db546744f629d13414cfd390f74958a2ba0