Fix clazy-fully-qualified-moc-types check for ActionReply

ActionReplay in KAuth must be without namespace

BUG: 457478